# cobra

./: .gitignore  Cargo.toml  README.md  REMAINING_FEATURES.md
src/: lib.rs  main.rs
src/cli/: add.rs  check.rs  freeze.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  show.rs  uninstall.rs  update.rs
src/core/: cache.rs  config.rs  installer.rs  mod.rs  package_manager.rs  python.rs  resolver.rs
src/registry/: client.rs  mod.rs  packagecloud.rs  pypi.rs
src/utils/: fs.rs  hash.rs  mod.rs  progress.rs
